# sast_cxx_lessons

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
00-vibe-coding/blog/: best-practices-for-prompt-engineering.md
01-introduction/: index.md
01-introduction/code-examples/: EXTRACTION_SUMMARY.md  FINAL_SUMMARY.md
01-introduction/code-examples/01-cpp-basics/: 03_compilation_commands.sh  04_common_errors.cpp  06_comments_example.cpp  07_namespace_methods.cpp
01-introduction/code-examples/02-variables-operators/: 03_variable_scope.cpp  04_variable_shadowing.cpp  05_variable_lifetime.cpp  07_comparison_operators.cpp  08_logical_operators.cpp  09_operator_precedence.cpp
01-introduction/code-examples/03-control-flow/: 04_switch_statement.cpp  07_do_while_loop.cpp
01-introduction/code-examples/04-functions/: 01_function_basics.cpp  03_parameter_passing.cpp
01-introduction/code-examples/05-arrays-collections/: 04_multidimensional_arrays.cpp
01-introduction/code-examples/06-classes-objects/: 02_bank_account_class.cpp  (+1 more)
02-build-system/: cmake-tutorial.md  cmake.md
02-build-system/env/: setup_env.ps1  setup_env.sh
build_root/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  TeachCXX.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  helloworld.vcxproj  helloworld.vcxproj.filters
docs/: contributing.md  getting-started.md  index.md
examples/02-build-system/example/Step11/MathFunctions/: CMakeLists.txt  MathFunctions.h
scripts/: docs.ps1  docs.sh
(+148 files in other folders)
